<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="settingApp">正在初始化应用. . .</string>
    <string name="netInfoWarning">当前是3G/4G网络，请注意流量使用</string>
    <string name="noNetWork">当前无网络连接</string>
    <string name="appId">74</string>
    <string name="appVersion">1.0</string>
    <string name="aesKey">dd358748fcabdda1</string>
    <string name="login_ch">登陆</string>
    <string name="logout_ch">注销</string>
    <string name="no_net_ch">当前无网络链接</string>
    <string name="my_favorate">我的收藏</string>
    <string name="get_vip">开通会员</string>
    <string name="click_to_login">点我登陆/注册</string>
    <string name="my_download">我的缓存</string>
    <string name="my_cache">观看记录</string>
    <string name="my_logout">退 出 登 陆</string>
    <string name="click_to_logout">点击登出</string>
    <string name="recom_url">http://115.29.190.54:99/Recommends.aspx</string>
    <string name="video_name">电影名称</string>
    <string name="recom_hot_name">  今日热播</string>
    <string name="default_page_num">30</string>
    <string name="default_order">2</string>
    <string name="default_district">0</string>
    <string name="default_kind">0</string>
    <string name="video_source_from">来源</string>
    <string name="get_play_url_new">http:</string>
    <string name="choose_episode">选集</string>
</resources>
